<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".CountryDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ADD8E6"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="Country Detail"
            android:layout_margin="10dp"/>

        <ImageView
            android:id="@+id/imgcountryFlag"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:src="@drawable/ic_launcher_background"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FF6347"
                android:text="@string/country_name"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/txtCountryName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#ADD8E6"
                android:layout_margin="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF6347"
                android:layout_weight="1"
                android:text="@string/capital"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/txtCapital"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#ADD8E6"
                android:layout_margin="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF6347"
                android:layout_weight="1"
                android:text="@string/calling_code"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/txtCallingCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#ADD8E6"
                android:layout_margin="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF6347"
                android:layout_weight="1"
                android:text="@string/region"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/txtRegion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#ADD8E6"
                android:layout_margin="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF6347"
                android:layout_weight="1"
                android:text="@string/sub_region"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/txtSubRegion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#ADD8E6"
                android:layout_margin="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF6347"
                android:layout_weight="1"
                android:text="@string/time_zone"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/txtTimeZone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#ADD8E6"
                android:layout_margin="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF6347"
                android:layout_weight="1"
                android:text="@string/currencies"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/txtCurrencies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#ADD8E6"
                android:layout_margin="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF6347"
                android:layout_weight="1"
                android:text="@string/language"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/txtLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ADD8E6"
                android:layout_weight="1"
                android:layout_margin="10dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnSaveOffline"
            android:text="@string/save_offline"
            android:layout_margin="10dp"
            android:layout_gravity="end"
            android:background="#FF6347"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


</LinearLayout>